feat: Delete Portfolio and Tokenomics pages - MEED-7161 - Meeds-io/meeds#2250 This change will delete Token Metrics pages to let community rely on DEX sites instead.